[package]
name = "postio"
version = "0.3.0"
authors = ["deg4uss3r <ricky@hosfelt.io>"]
description = "postio - Encrypted file sender/queue/receiver using an AWS S3 backend"
homepage = "https://github.com/deg4uss3r/postio"
repository = "https://github.com/deg4uss3r/postio"
readme = "README.md" 
license-file = "LICENSE.md"
[dependencies]
openssl = "0.9"
toml = "0.4"
serde_derive = "1.0"
serde = "1.0"
rand = "0.3"
rust-s3 = "0.8"
clap = "2.27"
shellexpand = "1.0"
