[package]
name = "postio"
version = "0.4.1"
authors = ["deg4uss3r <ricky@hosfelt.io>"]
description = "postio - Encrypted file sender/queue/receiver using an AWS S3 backend"
homepage = "https://github.com/deg4uss3r/postio"
repository = "https://github.com/deg4uss3r/postio"
readme = "README.md" 
license-file = "LICENSE.md"
edition = "2018"

[dependencies]
dirs = "1.0"
clap = "2.32"
openssl = { version = "0.10", features = ["vendored"]}
toml = "0.4"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand = "0.3"
rust-s3 = "0.8"
shellexpand = "1.0"
