[package]
name = "postio"
version = "0.7.0"
authors = ["deg4uss3r <ricky@hosfelt.io>"]
description = "postio - Encrypted file sender/queue/receiver using an AWS S3 backend"
homepage = "https://github.com/deg4uss3r/postio"
repository = "https://github.com/deg4uss3r/postio"
readme = "README.md" 
license-file = "LICENSE.md"
edition = "2018"

[build]
rustflags = "-Ctarget-feature=+avx2"

[dependencies]
aes = "0.3"
aead = "0.2"
block-modes = "0.3"
chacha20poly1305 = "0.3"
dirs = "2.0"
clap = "2.32"
sha3 = "0.8"
toml = "0.5"
serde_derive = "1.0"
serde = {version = "1.0", features = ["derive"]}
rand_os = "0.1"
rand = "0.7"
rust-s3 = "0.15"
shellexpand = "1.0"
x25519-dalek = "0.5"
